// Copyright 2015, gRPC Authors
// All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
package user_fans;

option java_multiple_files = true;
option java_package = "com.github.conanchen.gedit.user.fans.grpc";
option java_outer_classname = "UserFansProto";
option objc_class_prefix = "USRFANS";

import "common.proto";

// The userfans service definition.
service UserFansApi {

    rpc Add (AddRequest) returns (FanshipResponse) {
    }

    rpc FindParent (FindParentRequest) returns (FanshipResponse) {
    }

    rpc ListChild (ListChildRequest) returns (stream FanshipResponse) {
    }

}

message AddRequest {
    string fanId = 1;
}

message FindParentRequest {
    string fanId = 1;
}

message ListChildRequest {
    string parentId = 1;
    int32 from = 100;
    int32 size = 101;

}

message FanshipResponse {
    Status status = 999;
    Fanship fanship = 1;
}

message Fanship{
    string parentId = 1;
    string parentName = 11;
    string fanId = 2;
    string name = 3;
    int64 created = 4;
}