// Copyright 2015, gRPC Authors
// All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
package gedit.user;

option java_multiple_files = true;
option java_package = "com.github.conanchen.gedit.user.fans.grpc";
option java_outer_classname = "UserFansProto";
option objc_class_prefix = "USRFANS";

import "gedit/common.proto";

// The userfans service definition.
service UserFansApi {

    rpc Add (AddFanshipRequest) returns (FanshipResponse) {
    }

    rpc FindParent (FindParentFanshipRequest) returns (FanshipResponse) {
    }

    rpc ListChild (ListChildFanshipRequest) returns (stream FanshipResponse) {
    }

    rpc ListMyFan (ListMyFanRequest) returns (stream FanshipResponse) {
        //should be only used by me
    }
}

message AddFanshipRequest {
    string fanUuid = 1;
}

message FindParentFanshipRequest {
    string fanUuid = 1;
}

message ListChildFanshipRequest {
    string parentUuid = 1;
    int32 from = 100;
    int32 size = 101;
}

message ListMyFanRequest {
    int64 lastUpdated = 1;
}
message FanshipResponse {
    Status status = 999;
    Fanship fanship = 1;
}

message Fanship {
    string parentUuid = 1;
    string parentName = 11;
    string fanUuid = 2;
    string fanName = 3;
    int64 created = 4;
}